# NIX

./: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  TESTING_PLAN.md  bootstrap.py  config.emulators.example.json  config.json  config.json.example  coverage.xml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt
Back/: README.md  fix_users_api.py  iniciando.txt  package-lock.json  package.json  requirements.txt  test_api.py  views.py
Back/apps/accounts/: models.py  views.py
Back/apps/articles/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
Back/apps/articles/migrations/: 0006_alter_comment_options_remove_comment_ip_address_and_more.py  0007_alter_comment_options_comment_captcha_token_and_more.py
Back/apps/books/: admin.py  urls.py  views.py
Back/apps/books/migrations/: 0010_delete_bookcomment.py
Back/apps/mangas/: models.py  serializers.py  urls.py  views.py
Back/apps/mangas/migrations/: 0008_delete_comment.py
Back/core/: article_api.py  book_api.py  category_api.py  manga_api.py  settings.py  stats_views.py  urls.py  user_api.py  views.py
Back/core/repositories/: article_repository.py
Back/core/services/: article_service.py
Back/templates/: 1111status.html  status.html
Front/: documentacao.md  package-lock.json  package.json
Front/src/app/: globals.css  layout.tsx  page.tsx
Front/src/components/: ClientLayout.tsx  FloatingMenu.tsx  Navbar.tsx  Sidebar.tsx  SubMenu.tsx  ThemeSettings.tsx
Front/src/contexts/: AuthContext.tsx  ConfigContext.tsx
Front/src/types/: models.ts
Front/src/utils/: categoryFallback.ts
apps/accounts/: serializers.py
apps/articles/: serializers.py  urls.py  views.py
config/: __init__.py  emulator_config.py  settings.py
core/: settings.py
launcher/: __init__.py  game.py  game_finder.py  game_launcher.py  game_manager.py  image_cache.py  input_handler.py
tests/: conftest.py  test_emulators.py
tests/unit/: __init__.py  test_input_handler.py  test_theme_manager.py
ui/: game_card.py  game_detail_view.py  games_view.py  main_window.py  settings_view.py
ui/assets/: __init__.py
ui/styles/: __init__.py  dark.qss  light.qss  system.qss
utils/: __init__.py  logging_config.py  permissions.py  theme_manager.py
(+45 files in other folders)
